# runme

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.runme/: config.default.toml  info.json  queues.json  runme_config  submit_slurm_jobarray_TODO
src/runme/: __init__.py  __main__.py  cases.py  cli.py  commands.py  config.py  discover.py  dist.py  ensemble.py  filetype.py  hpc.py  namelist.py  params.py  run.py  sample.py  stage.py
src/runme/templates/: README.md  config.default.toml  info.json  queues.json  runme_config  submit_slurm
tests/: test_cases.py  test_filetype.py  test_overlay.py  test_save_case.py
