[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runme"
dynamic = ["version"]
description = "Stage, run, and submit single simulations and ensembles for model projects."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Alexander Robinson" },
]
dependencies = [
    "numpy",
    "scipy",
    "tomli; python_version < '3.11'",
]

[project.scripts]
runme = "runme.cli:main"

[tool.setuptools.dynamic]
version = { attr = "runme.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
runme = ["templates/*"]
